fix big images in projects on mobile view

--- a/res/css/style.css
+++ b/res/css/style.css
@@ -1000,6 +1000,7 @@ input, select {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+	max-width: 50vw;
 }
 
 .projectsPadding {
@@ -1020,6 +1021,8 @@ input, select {
     overflow: hidden;
     position: relative;
     width: 100%;
+	max-width: 50vw;
+	margin: auto;
 }
 
 .extra a {
